--- a/src/app/components/dashboard/finanzas/caja/gastos/gastos.component.css
+++ b/src/app/components/dashboard/finanzas/caja/gastos/gastos.component.css
@@ -20,3 +20,13 @@
 :host ::ng-deep .gastoDeleted{
     color: #FF5252 !important;
 }
+
+.product-badge.status-INACTIVO {
+    background: #FFCDD2;
+    color: #c63737;
+}
+
+.product-badge.status-ACTIVO {
+    background: #C8E6C9;
+    color: #256029;
+}
