--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -83,40 +83,31 @@
     <mat-divider></mat-divider>
     <button mat-button class="menu-button" routerLink="/dashboard/configuraciones">
         <mat-icon>settings</mat-icon>
-        <span>Configuraciones globales</span>
+        <span>Config</span>
     </button>
 </div>
 
 <!-- FINANZAS -->
 <div>
     <mat-divider></mat-divider>
-    
+    <button *appRole="['ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-config">
+        <mat-icon>settings_applications</mat-icon>
+        <span>Finanzas</span>
+    </button>
     <button *appRole="['CAJERO']" mat-button class="menu-button" routerLink="/dashboard/finanzas">
         <mat-icon>point_of_sale</mat-icon>
         <span>Caja</span>
-    </button>
-    <button *appRole="['ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-config">
-        <mat-icon>settings</mat-icon>
-        <span>Configuracion</span>
-    </button>
-    <button *appRole="['ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-corte-list">
-        <mat-icon>list</mat-icon>
-        <span>Cortes</span>
-    </button>
-    <button *appRole="['ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-movimientos">
-        <mat-icon>menu_book</mat-icon>
-        <span>Movimientos</span>
-    </button>
-    <button *appRole="['ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/cobro-list">
-        <mat-icon>featured_play_list</mat-icon>
-        <span>Listado de cobros</span>
-    </button>
-    <button *appRole="['CAJERO', 'ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-gastos">
-        <mat-icon>drive_file_move</mat-icon>
-        <span>Gastos</span>
-    </button>
-    <button *appRole="['CAJERO', 'ADMIN']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-ingresos">
-        <mat-icon>drive_file_move</mat-icon>
+    </button>    
+    <button *appRole="['CAJERO']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-ingresos">
+        <mat-icon>chevron_left</mat-icon>
         <span>Ingresos</span>
+    </button>
+    <button *appRole="['CAJERO']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-gastos">
+        <mat-icon>chevron_right</mat-icon>
+        <span>Gastos</span>
+    </button>    
+    <button *appRole="['CAJERO']" mat-button class="menu-button" routerLink="/dashboard/finanzas/caja-egresos">
+        <mat-icon>keyboard_double_arrow_right</mat-icon>
+        <span>Egresos</span>
     </button>
 </div>
