--- a/src/app/components/dashboard/finanzas/caja/cobros-list/cobro-list.component.css
+++ b/src/app/components/dashboard/finanzas/caja/cobros-list/cobro-list.component.css
@@ -16,3 +16,17 @@
     font-size: 12px;
     letter-spacing: .3px;
 }
+
+.product-badge.status-INACTIVO {
+    background: #FFCDD2;
+    color: #c63737;
+}
+
+.product-badge.status-ACTIVO {
+    background: #C8E6C9;
+    color: #256029;
+}
+
+:host ::ng-deep .cobroDeleted{
+    color: #FF5252 !important;
+}
