inclusion de primeng en modulos venta y compra

--- a/src/app/components/dashboard/almacen/categoria/categoria-list/categoria-list.component.html
+++ b/src/app/components/dashboard/almacen/categoria/categoria-list/categoria-list.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <span class="text-center">Departamento</span>
+    <span class="text-center">Categoria</span>
 </mat-toolbar>
 
 <mat-form-field appearance="standard">
