--- a/src/app/components/dashboard/compras/compra/producto/producto.component.html
+++ b/src/app/components/dashboard/compras/compra/producto/producto.component.html
@@ -30,9 +30,9 @@
                             <td mat-cell *matCellDef="let element"> {{element.costo_prom}} </td>
                         </ng-container>
                 
-                        <ng-container matColumnDef="marca">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Marca </th>
-                            <td mat-cell *matCellDef="let element"> {{element.marca.nombre}} </td>
+                        <ng-container matColumnDef="inventario">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Inventario </th>
+                            <td mat-cell *matCellDef="let element"> {{element.inventario[0].cantidad}} </td>
                         </ng-container>
                 
                         <ng-container matColumnDef="acciones">
