--- a/src/app/components/dashboard/ventas/venta/cotizacion/cotizacion.component.html
+++ b/src/app/components/dashboard/ventas/venta/cotizacion/cotizacion.component.html
@@ -1,57 +1,61 @@
-
-<mat-form-field appearance="standard">
-    <mat-label>Filtro</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input autocomplete="off">
-  </mat-form-field>
-  
-  <div class="mat-elevation-z8">
-    <table class="table-material" mat-table [dataSource]="dataSource" matSort>
-  
-        <!-- Inicio columnas -->
-        <ng-container matColumnDef="# DOC">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> # DOC </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
-        
-        <ng-container matColumnDef="Cliente">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Cliente </th>
-            <td mat-cell *matCellDef="let element"> {{element.cliente}} </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="Fecha">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
-            <td mat-cell *matCellDef="let element"> {{element.created_at | date:'short'}} </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="Sucursal">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sucursal </th>
-            <td mat-cell *matCellDef="let element"> {{element.sucursal}} </td>
-        
-        </ng-container>
-        <ng-container matColumnDef="Total">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
-            <td mat-cell *matCellDef="let element"> {{element.total}} </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef></th>
-  
-            <td mat-cell *matCellDef="let element" style="text-align: right">
-                <a (click)="verCotizacion(element.id)" class="pointer mx-2" style="color: #1878b0" matTooltip="Ver">
-                    <mat-icon>search</mat-icon>
-                </a>
-                <a (click)="eliminarCotizacion(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar">
-                    <mat-icon>delete</mat-icon>
-                </a>
+<h2>Cotizaciones</h2>
+<p-toolbar>
+    <div class="p-toolbar-group-left" [formGroup]="service.range">
+        <p-button label="Buscar" icon="pi pi-plus" class="mr-2" (onClick)="getPorFechas()" [disabled]="service.range.invalid"></p-button>        
+        <p-calendar selectionMode="range" [readonlyInput]="true" [showIcon]="true" class="mr-2" formControlName="dates"></p-calendar>   
+    </div>
+    <div class="p-toolbar-group-right">      
+    </div>
+</p-toolbar>
+<p-table
+        #dt1 [value]="Venta" dataKey="id" dataKey="id"
+        [paginator]="true" [rows]="10" [showCurrentPageReport]="true" 
+        [rowsPerPageOptions]="[10,25,50]"
+        [loading]="loading" [globalFilterFields]="['id, cliente','created_at', 'sucursal', 'total']">
+        <ng-template pTemplate="header">
+        <tr>
+            <th pSortableColumn="id" field="id">Id <p-sortIcon field="documento"></p-sortIcon></th>
+            <th pSortableColumn="cliente">Cliente <p-sortIcon field="cliente"></p-sortIcon></th>
+            <th pSortableColumn="created_at">Fecha <p-sortIcon field="created_at"></p-sortIcon></th>
+            <th pSortableColumn="sucursal">Sucursal <p-sortIcon field="sucursal"></p-sortIcon></th>
+            <th pSortableColumn="total">Total <p-sortIcon field="total"></p-sortIcon></th>
+            <th>Opciones</th>
+        </tr>
+        <tr>
+            <th >
+                <p-columnFilter type="text" field="id"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="cliente"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="created_at"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="sucursal"></p-columnFilter>
+            </th>
+            <th>
+                <p-columnFilter type="text" field="total"></p-columnFilter>
+            </th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-venta>
+        <tr >
+            <td>{{venta.id}}</td>
+            <td>{{venta.cliente}}</td>
+            <td>{{venta.created_at | date: 'MMM d, y, h:mm a'}}</td>
+            <td>{{venta.sucursal}}</td>
+            <td>{{venta.total}}</td>
+            <td>
+                <button (click)="verCotizacion(venta)" pButton pRipple type="button" icon="pi pi-search" class="p-button-rounded p-button-info"></button>
+                <button (click)="eliminarCotizacion(venta)" pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-danger"></button>
             </td>
-        </ng-container>
-        <!-- Fin de Columnas-->
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  
-    <mat-paginator [pageSizeOptions]="[5, 10, 20,40]" showFirstLastButtons aria-label="Select page of periodic elements">
-    </mat-paginator>
-  </div>
-  
+
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="7">No hay datos, seleccione otro rango de fechas</td>
+        </tr>
+    </ng-template>
+</p-table>
