--- a/src/app/components/dashboard/ventas/ventas.component.html
+++ b/src/app/components/dashboard/ventas/ventas.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar *appRole="['ADMIN', 'EMPLEADO']">
     <button mat-button class="menu-button" routerLink="/dashboard/ventas/venta">
       <mat-icon>format_list_bulleted</mat-icon>
       <span>Ver Ventas Hechas</span>
@@ -11,6 +11,10 @@
     <mat-icon>list_alt</mat-icon>
     <span>Nueva Venta</span>
     </button>
+    <button mat-button class="menu-button" routerLink="/dashboard/ventas/cuentas-por-cobrar">
+      <mat-icon>list_alt</mat-icon>
+      <span>Cuentas por cobrar</span>
+      </button>
   </mat-toolbar>
 
 <router-outlet></router-outlet> 
