--- a/src/app/components/dashboard/compras/compras.component.html
+++ b/src/app/components/dashboard/compras/compras.component.html
@@ -11,6 +11,10 @@
     <mat-icon>list_alt</mat-icon>
     <span>Nueva Compra</span>
     </button>
+    <button mat-button class="menu-button" routerLink="/dashboard/compras/cuenta-por-pagar">
+      <mat-icon>list_alt</mat-icon>
+      <span>Cuentas por pagar</span>
+      </button>
 
 
 <router-outlet></router-outlet> 
