--- a/src/app/components/dashboard/configuraciones/configuraciones.component.html
+++ b/src/app/components/dashboard/configuraciones/configuraciones.component.html
@@ -1,2 +1,12 @@
-<router-outlet></router-outlet>
+<p-menubar [model]="items">
+    <ng-template pTemplate="start">
+        <img src="https://www.primefaces.org/primeng/assets/showcase/images/primeng.svg" height="40" class="mr-2">
+    </ng-template>
+    <ng-template pTemplate="end">
+        <input type="text" pInputText placeholder="Search">
+    </ng-template>
+</p-menubar>
+<p-card>
+    <router-outlet></router-outlet>
+</p-card>
 
