--- a/src/app/components/dashboard/finanzas/caja/caja-corte-list/detalle-corte/detalle-corte.component.html
+++ b/src/app/components/dashboard/finanzas/caja/caja-corte-list/detalle-corte/detalle-corte.component.html
@@ -203,6 +203,39 @@
             </ng-template>
         </p-table>
 
+        <p-table [value]="cuentasPorCobrar" [paginator]="true" [rows]="5" responsiveLayout="scroll" *ngIf="cuentaPorCobrar">
+            <ng-template pTemplate="caption">
+                Cuentas Por Cobrar
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Id</th>
+                    <th>Fecha</th>
+                    <th>Descripcion</th>
+                    <th>Monto</th>
+                    <th>Saldo</th>
+                    <th>No. Credito</th>                                        
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-cuentaPorCobrar>
+                <tr [pSelectableRow]="rowData" [ngClass]="{'anulado': cuentaPorCobrar.deletedAt != null}">
+                    <td>{{cuentaPorCobrar.id}}</td>
+                    <td>{{cuentaPorCobrar.fecha | date: 'EEEE, MMMM d, y, h:mm a'}}</td>
+                    <td>{{cuentaPorCobrar.descripcion}}</td>
+                    <td>{{cuentaPorCobrar.monto}}</td>
+                    <td>{{cuentaPorCobrar.balance}}</td>
+                    <td>{{cuentaPorCobrar.cuentaPorCobrar}}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="footer">
+                <tr>
+                    <td colspan="3" class="text-right">Total</td>
+                    <td>{{totalCuentasPorCobrar}}</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </ng-template>
+        </p-table>
 
     </p-panel>
 
