--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 @import '~ngx-toastr/toastr';
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+@import 'primeflex/primeflex.css';
 
 /* You can add global styles to this file, and also import other style files */
 
