--- a/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
+++ b/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
@@ -43,7 +43,7 @@
                                    (keydown.enter)="onKeyPress($event.target)">
                             <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="displayFnn">
                               <mat-option *ngFor="let cat of Categoria" [value]="cat">
-                                {{cat.nombre}}{{cat.id}}
+                                {{cat.nombre}}
                               </mat-option>
                             </mat-autocomplete>
                             <mat-error *ngIf="CategoriaForm?.hasError('incorrect')">
@@ -77,24 +77,31 @@
                             <mat-icon>add_circle_outline</mat-icon>
                           </a>                         
                         </div>
+                        <ng-container formArrayName="costo">
+                            <div class="row" *ngFor="let control of service.costo.controls; let i = index" [formGroupName]="i">
+                              <div FormGroup="control" class="col-md-12"> 
 
-                        <div class="form-group col-md-12">   
-                          <mat-form-field class="three-quarters-width" appearance="fill">
-                            <mat-label>Precio</mat-label>
-                            <input required type="number" name="someid" matInput formControlName="costo_prom" [errorStateMatcher]="matcher"
-                            placeholder="Costo">
-                          </mat-form-field>
+                                <mat-form-field class="three-quarters-width" appearance="fill">
+                                  <mat-label>Costo</mat-label>
+                                  <input required type="number" name="someid" matInput formControlName="costo_prom"
+                                  placeholder="Costo" id="task{{i}}">
+                                </mat-form-field>
+                              
+                                <mat-form-field class="three-quarters-width" appearance="fill">
+                                  <mat-label>Anitguo Costo</mat-label>
+                                  <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="costo_prom_old"
+                                  id="task{{i}}">
+                              </mat-form-field>
 
-                          <mat-form-field class="three-quarters-width" appearance="fill">
-                              <mat-label>Anitguo Costo</mat-label>
-                              <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="costo_prom_old">
-                          </mat-form-field>
-                          <mat-form-field class="three-quarters-width" appearance="fill">
-                            <mat-label>Ultimo Precio C.</mat-label>
-                            <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="ultimo_precio">
-                        </mat-form-field>
+                                <mat-form-field class="three-quarters-width" appearance="fill">
+                                  <mat-label>Ultimo Precio C.</mat-label>
+                                  <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="ultimo_precio"
+                                  id="task{{i}}">
+                              </mat-form-field>
+                              </div>
+                            </div>       
+                      </ng-container>
 
-                      </div>
                       <div>
                         <div class="row" formArrayName="precio" class="mt-4" >
                           <div class="col">
@@ -140,7 +147,16 @@
                     <div class="mt-3">
                         <button type="button" (click)="service.edit ? actualizar() : agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}} Producto</button>
                     </div>
-                  </form> 
+                  </form>
+                  <pre>
+                    Esado del forulario: {{service.form.valid}}
+                    <br>
+                    Status {{service.form.status}}
+                </pre>
+                
+                <pre>
+                    {{service.form.value | json }}
+                </pre>  
             </div>
         </div>
     </div>
