--- a/src/app/components/dashboard/compras/compra/producto/producto.component.html
+++ b/src/app/components/dashboard/compras/compra/producto/producto.component.html
@@ -27,7 +27,7 @@
                 
                         <ng-container matColumnDef="costo">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Costo </th>
-                            <td mat-cell *matCellDef="let element"> {{element.costo_prom}} </td>
+                            <td mat-cell *matCellDef="let element"> {{element.costo[0].costo_prom}} </td>
                         </ng-container>
                 
                         <ng-container matColumnDef="inventario">
@@ -39,7 +39,7 @@
                             <th mat-header-cell *matHeaderCellDef></th>
                 
                             <td mat-cell *matCellDef="let element" style="text-align: right">
-                                <a class="pointer mx-2" style="color: #1878b0" matTooltip="Ver">
+                                <a (click)="openExistencia(element.id)" class="pointer mx-2" style="color: #1878b0" matTooltip="Existencia Sucursales">
                                     <mat-icon>search</mat-icon>
                                 </a>
                                 <a (click)="service.llenarProducto(element)" class="pointer mx-2" style="color: #1f516f" matTooltip="Seleccionar">
