--- a/src/app/components/dashboard/recursos-humanos/puesto/puesto-list/puesto-list.component.html
+++ b/src/app/components/dashboard/recursos-humanos/puesto/puesto-list/puesto-list.component.html
@@ -27,18 +27,29 @@
             <td mat-cell *matCellDef="let element"> {{element.departamento.nombre}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="estado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+            <td mat-cell *matCellDef="let element">
+                <label *ngIf="element.estado === true" style="color: #1878b0; font-weight: bold">Activo</label>
+                <label *ngIf="element.estado === false" style="color: #c40e0e; font-weight: bold">Innactivo</label>
+            </td>
+        </ng-container>
+
         <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef></th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header ></th>
 
             <td mat-cell *matCellDef="let element" style="text-align: right">
-                <a class="pointer mx-2" style="color: #1878b0" matTooltip="Ver Usuario">
-                    <mat-icon>search</mat-icon>
-                </a>
+            
                 <a (click)="verEdit(element)" class="pointer mx-2" style="color: #1f516f" matTooltip="Editar Usuario">
                     <mat-icon>edit</mat-icon>
                 </a>
-                <a (click)="elimininarPuesto(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar Usuario">
-                    <mat-icon>delete</mat-icon>
+
+                <a *ngIf="element.estado === false" (click)="activar(element)" class="pointer mx-2" style="color: #1878b0" matTooltip="activar">
+                    <mat-icon>lock_open</mat-icon>
+                </a>
+                
+                <a *ngIf="element.estado === true" (click)="elimininarPuesto(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar Usuario">
+                    <mat-icon>lock</mat-icon>
                 </a>
             </td>
         </ng-container>
