--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -40,12 +40,22 @@
         <span>Categoria</span>
     </button>
 
+    <button mat-button class="menu-button" routerLink="/dashboard/almacen/tipo-precio">
+        <mat-icon>format_list_bulleted</mat-icon>
+        <span>Tipo Precios</span>
+    </button>
+
+    <button mat-button class="menu-button" routerLink="/dashboard/almacen/precio">
+        <mat-icon>filter_list</mat-icon>
+        <span>Precios</span>
+    </button>
+
     <button mat-button class="menu-button" routerLink="/dashboard/almacen/producto">
         <mat-icon>inventory_2</mat-icon>
         <span>Producto</span>
     </button>
     <button mat-button class="menu-button" routerLink="/dashboard/almacen/inventario-list">
-        <mat-icon>inventory_2</mat-icon>
+        <mat-icon>double_arrow</mat-icon>
         <span>Inventario</span>
     </button>
 </div>
@@ -111,3 +121,5 @@
         <span>Egresos</span>
     </button>
 </div>
+
+
